# fastapi1

./: README.md  locustfile.py  pyproject.toml
ci/: .docker-env-local  Dockerfile.local  docker-compose-local.yml
fastapi1/: app.py  app_logging.py
fastapi1/db/: __init__.py  dao_methods.py  db_init.py  models.py  session.py
fastapi1/notifications/v1/: request.py  response.py  rest.py
fastapi1/status/: rest.py
scripts/: run_app.sh  run_checks.sh
